--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-        "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sass": "^1.94.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
