--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "resend": "^6.9.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
