--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
@@ -30,12 +28,14 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@react-email/preview-server": "^4.3.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "react-email": "5.2.5",
     "sass": "^1.94.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
