--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
+    "react-cookie-consent": "^10.0.1",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
